crates/plotnik-lib/tests/02-parser/recovery_validation/comma_in_node_children.txt
Q = (node (a), (b))
------------------ DIAGNOSTICS -------------------
error: patterns are separated by whitespace
 --> query.ptk:1:14
  |
1 | Q = (node (a), (b))
  |              ^
  |
help: remove the `,`
  |
1 - Q = (node (a), (b))
1 + Q = (node (a) (b))
  |
